--- a/style.css
+++ b/style.css
@@ -58,6 +58,49 @@ li a:hover {
     text-align: left;
 }
 
+.thumbnail {
+    width: 500px;
+    height: 300px;
+    border: 1px solid black;
+    cursor: pointer;
+}
+  
+.thumbnail img {
+    width: 100%;
+    height: 70%;
+    object-fit: fill;
+}
+  
+.thumbnail h2 {
+    margin: 10px;
+    font-size: 24px;
+    text-align: center;
+}
+
+.tips {
+    text-align: left;
+}
+  
+.tips ul {
+    justify-content: left;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+  
+.tips li {
+    display: flex;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0px 0;
+}
+  
+.orange {
+    color: orange;
+    margin: 0 5px;
+}
+  
+
 footer {
     background-color: #383838;
     color: #fff;
