--- a/subdirs/news/articles/hired/hired.css
+++ b/subdirs/news/articles/hired/hired.css
@@ -13,11 +13,6 @@ header {
     color: #fff;
 }
 
-h4 {
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: left;
-}
-
 nav {
     background-color: gray;
 }
@@ -46,39 +41,53 @@ li a:hover {
     background-color: #313131;
 }
 
-.block {
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    text-align: center;
+}
+
+p {
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+
+.box {
     background-color: #313131;
     color: white;
     padding: 20px;
 }
 
-.block h1 {
+.box h1 {
     font-family: Arial, Helvetica, sans-serif;
     text-align: left;
 }
 
-.block li {
-    font-size: larger;
-}
-
-.block p {
+.box h2 {
     font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
 }
 
-.media {
-    display: flex;
+.box p {
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
 }
 
-.media button {
+.box span {
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
+    font-size: 15px;
+}
+
+.box button {
     background-color: #383838;
     border-color: #fff;
     color: #fff;
     font-family: Arial, Helvetica, sans-serif;
     width: 120px;
     height: 40px;
-    margin-right: 5px;
 }
-  
+
 footer {
     background-color: #383838;
     color: #fff;
