--- a/subdirs/news/news.css
+++ b/subdirs/news/news.css
@@ -67,11 +67,16 @@ li a:hover {
     text-align: center;
 }
 
+.thumbnails {
+    display: flex;
+}
+
 .thumbnail {
     width: 500px;
     height: 300px;
     border: 1px solid black;
     cursor: pointer;
+    margin-right: 5px;
 }
   
 .thumbnail img {
@@ -81,6 +86,26 @@ li a:hover {
 }
   
 .thumbnail h2 {
+    margin: 10px;
+    font-size: 24px;
+    text-align: center;
+}
+
+.thumbnail2 {
+    width: 500px;
+    height: 300px;
+    border: 1px solid black;
+    cursor: pointer;
+    margin-left: 10px;
+}
+  
+.thumbnail2 img {
+    width: 100%;
+    height: 70%;
+    object-fit: fill;
+}
+  
+.thumbnail2 h2 {
     margin: 10px;
     font-size: 24px;
     text-align: center;
