--- a/subdirs/projects/projects.css
+++ b/subdirs/projects/projects.css
@@ -78,7 +78,7 @@ li a:hover {
     font-family: Arial, Helvetica, sans-serif;
     width: 120px;
     height: 40px;
-    margin: 5px;
+    margin: 0px;
 }
   
 .cli-img {
@@ -100,6 +100,43 @@ li a:hover {
 .web-detail {
     width: 60%;
 }
+
+.web-old {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+  
+.web-old-detail {
+    width: 60%;
+}
+
+.web-old-detail button {
+    background-color: #383838;
+    border-color: #fff;
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 120px;
+    height: 40px;
+    margin: 0px;
+}
+
+.web-old-img {
+    width: 40%;
+    text-align: right;
+}
+  
+.web-old-img img {
+    width: 30%;
+}
+
+.sololearn {
+    display: inline-block;
+    vertical-align: top;
+    color: orange;
+}
+  
 
 .under {
     display: flex;
