--- a/subdirs/links/links.css
+++ b/subdirs/links/links.css
@@ -12,41 +12,7 @@ header {
     font-weight: bold;
     color: #fff;
 }
-
-h4 {
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: left;
-}
-
-nav {
-    background-color: gray;
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-}
-
-li {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-}
-
-li a {
-    display: block;
-    padding: 8px;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-}
-
-li a:hover {
-    background-color: #313131;
-}
-
+   
 .block {
     background-color: #313131;
     color: white;
@@ -55,30 +21,42 @@ li a:hover {
 
 .block h1 {
     font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    text-align: center;
+}
+
+.block h2 {
+    font-family: Arial, Helvetica, sans-serif;
     text-align: left;
 }
 
-.block li {
-    font-size: larger;
+.links {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    justify-content: center;
 }
 
-.block p {
-    font-family: Arial, Helvetica, sans-serif;
+.links li {
+    margin-bottom: 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
 }
 
-.media {
-    display: flex;
+.links li a {
+    display: block;
+    background-color: rgb(90, 90, 90);
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    margin-right: 10px;
+    padding: 10px;
 }
 
-.media button {
-    background-color: #383838;
-    border-color: #fff;
-    color: #fff;
-    font-family: Arial, Helvetica, sans-serif;
-    width: 120px;
-    height: 40px;
-    margin-right: 5px;
+.links li a:hover {
+    background-color: rgb(70, 70, 70);
 }
+
   
 footer {
     background-color: #383838;
