--- a/subdirs/settings/settings.css
+++ b/subdirs/settings/settings.css
@@ -17,7 +17,7 @@ nav {
     background-color: gray;
 }
 
-ul {
+nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -25,21 +25,20 @@ ul {
     justify-content: center;
 }
 
-li {
+nav ul li {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
+    margin: 0px
 }
 
-li a {
+nav ul li a {
     display: block;
-    padding: 10px;
     color: white;
     text-align: center;
     text-decoration: none;
     margin: 0px;
 }
 
-li a:hover {
+nav ul li a:hover {
     background-color: #313131;
 }
    
@@ -60,54 +59,40 @@ li a:hover {
     text-align: left;
 }
 
-.thumbnail {
-    width: 500px;
-    height: 300px;
-    border: 1px solid black;
-    cursor: pointer;
+.settings-container {
+    display: flex;
 }
   
-.thumbnail img {
-    width: 100%;
-    height: 70%;
-    object-fit: fill;
+.sidebar {
+    background-color: #f3f3f3;
+    width: 200px;
 }
   
-.thumbnail h2 {
-    margin: 10px;
-    font-size: 24px;
-    text-align: center;
-}
-
-.tips {
-    justify-content: left;
+ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    margin-bottom: 20px;
 }
   
-.tips p {
-    display: flex;
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0px 0;
+li {
+    padding: 10px;
 }
   
-.orange {
-    color: orange;
-    margin: 0 5px;
-    display: inline-block;
-    vertical-align: top;
+li a {
+    text-decoration: none;
+    color: #000;
+    font-weight: bold;
+}
+  
+li a:hover {
+    background-color: #ccc;
+}
+  
+.settings-content {
+    flex: 1;
+    padding: 20px;
 }
 
-.orangetxt {
-    display: inline;
-}
-
-p {
-    font-family: Arial, Helvetica, sans-serif;
-}
-  
 footer {
     background-color: #383838;
     color: #fff;
